Adjusted header alignment. Fixes #185

--- a/style.scss
+++ b/style.scss
@@ -199,7 +199,7 @@ img {
   cursor: pointer;
   font-family: $lobster;
   font-weight: 300;
-  font-size: 28px;
+  font-size: 36px;
   letter-spacing: 1px;
 }
 
